Initial pass. Requires a greater consolidation of shares files across the ACS project gh-pages

--- a/index.html
+++ b/index.html
@@ -1,17 +1,75 @@
+---
+layout: home
+title: Adobe Consulting Services
+description: A collection of AEM works aimed at enabling the deployment and development of AEM-based solutions.
+---
 
-<!DOCTYPE html>
-<html lang="en-us">
-    <head>
-        <meta charset="utf-8">
-        <title>Adobe Consulting Services</title>
-        <meta name="description" content="Adobe Consulting Services.">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta http-equiv="refresh" content="0; url=http://adobe-consulting-services.github.io/acs-aem-commons">
-        <link rel="canonical" href="http://adobe-consulting-services.github.io/acs-aem-commons" />
-    </head>
-    <body>
-      <p>
-        You are being redirected to... <a href="http://adobe-consulting-services.github.io/acs-aem-commons">http://adobe-consulting-services.github.io/acs-aem-commons</a>
-      </p>
-    </body>
-</html>
+<section id="jumbotron">
+  <div class="container">
+    <h1>{{ page.title }}</h1>
+    <p class="lead">Because we believe in what we do</p>
+  </div>
+</section>
+
+<!-- Promotion Area -->
+<section id="projects" class="hidden-xs">
+  <div class="container">
+
+    <div class="row">
+      <div class="col-sm-6 col-xs-12">
+        <div class="project acs-aem-commons">
+
+          <a href="{{ site.baseurl }}/acs-aem-commons">
+            <img class="img-responsive"src="{{ site.baseurl }}/images/acs-aem-commons.png" alt="ACS AEM Commons"/>
+          </a>
+
+          <h2><a href="{{ site.baseurl }}/acs-aem-commons">ACS AEM Commons</a></h2>
+            <p>An AEM development and component toolkit for bootstrapping any AEM project</p>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-xs-12">
+        <div class="project acs-aem-tools">
+          
+          <a href="{{ site.baseurl }}/acs-aem-tools">
+            <img class="img-responsive" src="{{ site.baseurl }}/images/acs-aem-tools.png" alt="ACS AEM Tools"/>
+          </a>
+          <h2><a href="{{ site.baseurl }}/acs-aem-tools">ACS AEM Tools</a></h2>
+          <p>A set of tools for AEM to make developer lives easier</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section class="striation-dark">
+  <div class="container">
+    <div class="row">
+
+      <div class="col-lg-11 col-lg-offset-1 col-md-12">
+        <h2>Who are you?</h2>
+        <p>
+          We are Adobe Consulting Services. We build solutions on top of Adobe products including Adobe Experience Manager (AEM, fka CQ, fka Communique).
+        </p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<section class="striation-light">
+  <div class="container">
+    <div class="row">
+
+      <div class="col-lg-11 col-lg-offset-1 col-md-12">
+        <h2>What is this?</h2>
+        <p>
+          The ACS AEM Projects are a colleciton of open source projects created and maintained by Adobe Consulting Services (ACS) to aid in the development and delivery of AEM-based solutions. As open source projects ACS encourages everyone to use AND contribute to these projects.
+        </p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
