--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@ description: A collection of AEM works aimed at enabling the deployment and deve
       <div class="col-sm-6 col-xs-12">
         <div class="project acs-aem-commons">
 
-          <a href="{{ site.baseurl }}/acs-aem-commons">
-            <img class="img-responsive"src="{{ site.baseurl }}/images/acs-aem-commons.png" alt="ACS AEM Commons"/>
+          <a href="/acs-aem-commons">
+            <img class="img-responsive"src="{{ site.baseurl }}./images/acs-aem-commons.png" alt="ACS AEM Commons"/>
           </a>
 
-          <h2><a href="{{ site.baseurl }}/acs-aem-commons">ACS AEM Commons</a></h2>
+          <h2><a href="/acs-aem-commons">ACS AEM Commons</a></h2>
             <p>An AEM development and component toolkit for bootstrapping any AEM project</p>
         </div>
       </div>
@@ -31,10 +31,10 @@ description: A collection of AEM works aimed at enabling the deployment and deve
       <div class="col-sm-6 col-xs-12">
         <div class="project acs-aem-tools">
           
-          <a href="{{ site.baseurl }}/acs-aem-tools">
-            <img class="img-responsive" src="{{ site.baseurl }}/images/acs-aem-tools.png" alt="ACS AEM Tools"/>
+          <a href="/acs-aem-tools">
+            <img class="img-responsive" src="/images/acs-aem-tools.png" alt="ACS AEM Tools"/>
           </a>
-          <h2><a href="{{ site.baseurl }}/acs-aem-tools">ACS AEM Tools</a></h2>
+          <h2><a href="/acs-aem-tools">ACS AEM Tools</a></h2>
           <p>A set of tools for AEM to make developer lives easier</p>
         </div>
       </div>
