--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ description: A collection of AEM works aimed at enabling the deployment and deve
 <section id="jumbotron">
   <div class="container">
     <h1>{{ page.title }}</h1>
-    <p class="lead">Because we believe in what we do</p>
+    <p class="lead">Because we like in what we do</p>
   </div>
 </section>
 
