--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ description: A collection of AEM works aimed at enabling the deployment and deve
       <div class="col-lg-11 col-lg-offset-1 col-md-12">
         <h2>Who are you?</h2>
         <p>
-          We are Adobe Consulting Services. We build solutions on top of Adobe products including Adobe Experience Manager (AEM, fka CQ, fka Communique).
+          We are Adobe Consulting Services. We build solutions on top of Adobe products including Adobe Experience Manager (AEM, fka CQ, fka Communique). <a href="http://www.adobe.com/consulting/" target="_new">Learn more</a>
         </p>
       </div>
 
