--- a/acs-aem-tools/index.html
+++ b/acs-aem-tools/index.html
@@ -1,75 +1,87 @@
 ---
-layout: projects-commons
-title: Adobe AEM Commons
-description: A collection of AEM works aimed at enabling the deployment and development of AEM-based solutions.
+layout: tools-home
+title: ACS AEM Tools
+description: ...
 ---
 
-<section id="jumbotron">
-  <div class="container">
-    <h1>{{ page.title }}</h1>
-    <p class="lead">The wheel doesnt need reinvinting</p>
-  </div>
-</section>
+<!-- News -->
+{% include tools/news.html %}
 
-<!-- Promotion Area -->
-<section id="projects" class="hidden-xs">
-  <div class="container">
 
-    <div class="row">
-      <div class="col-sm-6 col-xs-12">
-        <div class="project acs-aem-commons">
+<!-- How to use -->
+<section class="introduction">
+    <div class="container">
+        <div class="wrapper infos-with-icon">
 
-          <a href="/acs-aem-commons">
-            <img class="img-responsive"src="{{ site.baseurl }}./images/acs-aem-commons.png" alt="ACS AEM Commons"/>
-          </a>
+            <div class="info-with-icon">
+                <div class="icon icon-check"></div>
 
-          <h2><a href="/acs-aem-commons">ACS AEM Commons</a></h2>
-            <p>An AEM development and component toolkit for bootstrapping any AEM project</p>
+                <h4>What is ACS AEM Tools?</h4>
+
+                <p>
+                    A set of tools for making AEM 5.6 developer lives easier.
+                </p>
+
+            </div>
+
+            <div class="info-with-icon">
+                <div class="icon icon-gear"></div>
+
+                <h4>How do I use ACS AEM Tools?</h4>
+
+                <p>
+                    ACS AEM Tools is <em>ONLY</em> for use on <em>development and QA environments</em>.
+                    Download the latest release as a CQ Package and install via Package Manager.
+                </p>
+            </div>
+
+            <div class="info-with-icon">
+                <div class="icon icon-gear"></div>
+
+                <h4>How to <u>use</u> ACS AEM Commons!</h4>
+
+                <p>
+                    Add as a <em>sub package</em> from repo.adobe.com using Maven
+                    or manually deploy the <em><a href="#">package</a> using package manager</em>.
+                </p>
+            </div>
+
         </div>
-      </div>
+    </div>
+</section>
 
-      <div class="col-sm-6 col-xs-12">
-        <div class="project acs-aem-tools">
-          
-          <a href="/acs-aem-tools">
-            <img class="img-responsive" src="/images/acs-aem-tools.png" alt="ACS AEM Tools"/>
-          </a>
-          <h2><a href="/acs-aem-tools">ACS AEM Tools</a></h2>
-          <p>A set of tools for AEM to make developer lives easier</p>
+
+<!-- Features -->
+<section class="features">
+    <div class="stripe">
+        <div class="container">
+            <h2 id="features">ACS AEM Tools Features</h2>
         </div>
-      </div>
     </div>
-  </div>
-</section>
 
+    <div class="container">
+        <div class="wrapper">
+            {% for post in site.posts.acs-aem-tools %}
+            {% if post.categories contains 'features' %}
 
-<section class="striation-dark">
-  <div class="container">
-    <div class="row">
+            {% assign mod2 = forloop.index|modulo:2 %}
+            {% assign mod3 = forloop.index|modulo:3 %}
 
-      <div class="col-lg-11 col-lg-offset-1 col-md-12">
-        <h2>Who are you?</h2>
-        <p>
-          We are Adobe Consulting Services. We build solutions on top of Adobe products including Adobe Experience Manager (AEM, fka CQ, fka Communique).
-        </p>
-      </div>
+            {% include shared/feature-card.html feature=post project=page.project %}
 
-    </div>
-  </div>
-</section>
+            {% if mod2 == 0 %}
+            <div class="clearfix visible-sm visible-xs hidden-md hidden-lg"></div>
+            {% endif %}
 
-<section class="striation-light">
-  <div class="container">
-    <div class="row">
+            {% if mod3 == 0 %}
+            <div class="clearfix hidden-sm hidden-xs visible-md visible-lg"></div>
+            {% endif %}
 
-      <div class="col-lg-11 col-lg-offset-1 col-md-12">
-        <h2>What is this?</h2>
-        <p>
-          The ACS AEM Projects are a colleciton of open source projects created and maintained by Adobe Consulting Services (ACS) to aid in the development and delivery of AEM-based solutions. As open source projects ACS encourages everyone to use AND contribute to these projects.
-        </p>
-      </div>
+            {% endif %}
+            {% endfor %}
+        </div>
 
     </div>
-  </div>
 </section>
 
+{% include shared/who-we-are.html %}
