--- a/index.html
+++ b/index.html
@@ -5,78 +5,44 @@ title: Adobe Consulting Services
 description: A collection of AEM works aimed at enabling the deployment and development of AEM-based solutions.
 ---
 
-
-
-<section>
+<!-- How to use -->
+<section id="projects">
     <div class="container">
+        <div class="wrapper infos-with-icon">
 
+            <div class="acs-aem-commons info-with-icon">
+                <a href="/acs-aem-commons" class="icon icon-acs-aem-commons"></a>
 
-    </div>
-</section>
+                <h4><a href="/acs-aem-commons">ACS AEM Commons</a></h4>
 
+                <p>
+                    An AEM development and component toolkit for bootstrapping any AEM project
+                </p>
 
+            </div>
 
+            <div class="acs-aem-tools info-with-icon">
+                <a href="/acs-aem-tools" class="icon icon-acs-aem-tools"></a>
 
+                <h4><a href="/acs-aem-tools">ACS AEM Tools</a></h4>
 
-<!-- Promotion Area -->
-<section id="projects" class="hidden-xs">
-  <div class="container">
+                <p>
+                    A set of tools for AEM to make developer lives easier
+                </p>
+            </div>
 
-    <div class="row">
-      <div class="col-sm-6 col-xs-12">
-        <div class="project acs-aem-commons">
+            <div class="acs-aem-samples info-with-icon">
+                <div class="icon icon-acs-aem-samples"></div>
 
-          <a href="/acs-aem-commons">
-            <img class="img-responsive"src="{{ site.baseurl }}./images/acs-aem-commons.png" alt="ACS AEM Commons"/>
-          </a>
+                <h4>ACS AEM Samples <em>Coming Soon!</em></h4>
 
-          <h2><a href="/acs-aem-commons">ACS AEM Commons</a></h2>
-            <p>An AEM development and component toolkit for bootstrapping any AEM project</p>
+                <p>
+                    <em>AEM/Adobe CQ collection of code samples, examples and templates
+                </p>
+            </div>
+
         </div>
-      </div>
-
-      <div class="col-sm-6 col-xs-12">
-        <div class="project acs-aem-tools">
-          
-          <a href="/acs-aem-tools">
-            <img class="img-responsive" src="/images/acs-aem-tools.png" alt="ACS AEM Tools"/>
-          </a>
-          <h2><a href="/acs-aem-tools">ACS AEM Tools</a></h2>
-          <p>A set of tools for AEM to make developer lives easier</p>
-        </div>
-      </div>
     </div>
-  </div>
 </section>
 
-
-<section class="striation-dark">
-  <div class="container">
-    <div class="row">
-
-      <div class="col-lg-11 col-lg-offset-1 col-md-12">
-        <h2>Who are you?</h2>
-        <p>
-          We are Adobe Consulting Services. We build solutions on top of Adobe products including Adobe Experience Manager (AEM, fka CQ, fka Communique).
-        </p>
-      </div>
-
-    </div>
-  </div>
-</section>
-
-<section class="striation-light">
-  <div class="container">
-    <div class="row">
-
-      <div class="col-lg-11 col-lg-offset-1 col-md-12">
-        <h2>What is this?</h2>
-        <p>
-          The ACS AEM Projects are a colleciton of open source projects created and maintained by Adobe Consulting Services (ACS) to aid in the development and delivery of AEM-based solutions. As open source projects ACS encourages everyone to use AND contribute to these projects.
-        </p>
-      </div>
-
-    </div>
-  </div>
-</section>
-
+{% include shared/who-we-are.html %}
