--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ description: A collection of AEM works aimed at enabling the deployment and deve
                 <h4>ACS AEM Samples <em>Coming Soon!</em></h4>
 
                 <p>
-                    <em>AEM/Adobe CQ collection of code samples, examples and templates
+                    AEM/Adobe CQ collection of code samples, examples and templates
                 </p>
             </div>
 
