More jumbotronics and misc cleanup

--- a/acs-aem-tools/index.html
+++ b/acs-aem-tools/index.html
@@ -25,24 +25,22 @@ description: ...
             </div>
 
             <div class="info-with-icon">
-                <div class="icon icon-gear"></div>
+                <div class="icon icon-laptop"></div>
 
-                <h4>How do I use ACS AEM Tools?</h4>
+                <h4>When should I use ACS AEM Tools?</h4>
 
                 <p>
                     ACS AEM Tools is <em>ONLY</em> for use on <em>development and QA environments</em>.
-                    Download the latest release as a CQ Package and install via Package Manager.
                 </p>
             </div>
 
             <div class="info-with-icon">
-                <div class="icon icon-gear"></div>
+                <div class="icon icon-download"></div>
 
-                <h4>How to <u>use</u> ACS AEM Commons!</h4>
+                <h4>Where do I get ACS AEM Tools?</h4>
 
                 <p>
-                    Add as a <em>sub package</em> from repo.adobe.com using Maven
-                    or manually deploy the <em><a href="#">package</a> using package manager</em>.
+                    Download the <a href="#">latest release as a CQ Package</a> and install via Package Manager.
                 </p>
             </div>
 
