acs tools images

--- a/acs-aem-tools/index.html
+++ b/acs-aem-tools/index.html
@@ -1,12 +1,12 @@
 ---
 layout: tools-home
+project: tools
 title: ACS AEM Tools
 description: ...
 ---
 
 <!-- News -->
 {% include tools/news.html %}
-
 
 <!-- How to use -->
 <section class="introduction">
