--- a/index.html
+++ b/index.html
@@ -5,44 +5,6 @@ title: Adobe Consulting Services
 description: A collection of AEM works aimed at enabling the deployment and development of AEM-based solutions.
 ---
 
-<!-- How to use -->
-<section id="projects">
-    <div class="container">
-        <div class="wrapper infos-with-icon">
-
-            <div class="acs-aem-commons info-with-icon">
-                <a href="/acs-aem-commons" class="icon icon-acs-aem-commons"></a>
-
-                <h4><a href="/acs-aem-commons">ACS AEM Commons</a></h4>
-
-                <p>
-                    An AEM development and component toolkit for bootstrapping any AEM project
-                </p>
-
-            </div>
-
-            <div class="acs-aem-tools info-with-icon">
-                <a href="/acs-aem-tools" class="icon icon-acs-aem-tools"></a>
-
-                <h4><a href="/acs-aem-tools">ACS AEM Tools</a></h4>
-
-                <p>
-                    A set of tools for AEM to make developer lives easier
-                </p>
-            </div>
-
-            <div class="acs-aem-samples info-with-icon">
-                <div class="icon icon-acs-aem-samples"></div>
-
-                <h4>ACS AEM Samples <em>Coming Soon!</em></h4>
-
-                <p>
-                    AEM/Adobe CQ collection of code samples, examples and templates
-                </p>
-            </div>
-
-        </div>
-    </div>
-</section>
+{% include shared/projects.html %}
 
 {% include shared/who-we-are.html %}
