Fixes to sliders

--- a/acs-aem-commons/index.html
+++ b/acs-aem-commons/index.html
@@ -1,7 +1,7 @@
 ---
 layout: acs-aem-commons_home
 title: Adobe AEM Commons
-description: xxxx
+description: ...
 ---
 <!-- How to use -->
 <section class="introduction">
@@ -11,7 +11,7 @@ description: xxxx
             <div class="info-with-icon">
                 <div class="icon icon-check"></div>
 
-                <h4>What ACS AEM Commons <u>is</u>!</h4>
+                <h4>What ACS AEM Commons is!</h4>
 
                 <p>
                     A way to <em>bootstra AEM project</em> with common functionality,
@@ -24,7 +24,7 @@ description: xxxx
             <div class="info-with-icon">
                 <div class="icon icon-x"></div>
 
-                <h4>What ACS AEM Commons <u>isn't</u>!</h4>
+                <h4>What ACS AEM Commons isn't!</h4>
 
                 <p>
                     A <em>framework</em>,
@@ -37,7 +37,7 @@ description: xxxx
             <div class="info-with-icon">
                 <div class="icon icon-gear"></div>
 
-                <h4>How to <u>use</u> ACS AEM Commons!</h4>
+                <h4>How to use ACS AEM Commons!</h4>
 
                 <p>
                     Add as a <em>sub package</em> from repo.adobe.com using Maven
