--- a/acs-aem-commons/index.html
+++ b/acs-aem-commons/index.html
@@ -14,7 +14,7 @@ description: ...
                 <h4>What ACS AEM Commons is!</h4>
 
                 <p>
-                    A way to <em>bootstra AEM project</em> with common functionality,
+                    A way to <em>bootstrap AEM project</em> with common functionality,
                     a set of <em>reusable components</em>,
                     and an <em>AEM development toolkit</em>.
                 </p>
