--- a/acs-aem-commons/index.html
+++ b/acs-aem-commons/index.html
@@ -29,7 +29,7 @@ description: ...
                 <p>
                     A <em>framework</em>,
                     library with <em>required</em>
-                    <a href="{{ site.baseurl }}/pages/thirdparty.html">3rd party dependencies</a>,
+                    <a href="/acs-aem-commons/pages/thirdparty.html">3rd party dependencies</a>,
                     or a library that <em>changes</em> standard AEM functionality by default.
                 </p>
             </div>
@@ -40,8 +40,9 @@ description: ...
                 <h4>How to use ACS AEM Commons!</h4>
 
                 <p>
-                    Add as a <em>sub package</em> from repo.adobe.com using Maven
+                    Add as a <em>sub package</em> from repo.adobe.com <a href="/acs-aem-commons/pages/maven.html">using Maven</a>
                     or manually deploy the <em><a href="#">package</a> using package manager</em>.
+                     <sup id="fnref:1"><a href="#fn:1" rel="footnote">1</a></sup>
                 </p>
             </div>
 
@@ -82,6 +83,15 @@ description: ...
 
     </div>
 </section>
+
+<!-- Footnotes -->
+<div class="footnotes">
+    <ol>
+        <li class="footnote" id="fn:1">
+            <p>In some circumstances, manual installation using the package manager will not appear to successfully complete. If this happens, reloading the package manager UI is necessary.<a href="#fnref:1" title="return to article"> ↩</a><p>
+        </li>
+    </ol>
+</div>
 
 {% include shared/who-we-are.html %}
 
