More stylistic tweaks

--- a/acs-aem-commons/index.html
+++ b/acs-aem-commons/index.html
@@ -40,9 +40,12 @@ description: ...
                 <h4>How to use ACS AEM Commons!</h4>
 
                 <p>
-                    Add as a <em>sub package</em> from repo.adobe.com <a href="/acs-aem-commons/pages/maven.html">using Maven</a>
-                    or manually deploy the <em><a href="#">package</a> using package manager</em>.
-                     <sup id="fnref:1"><a href="#fn:1" rel="footnote">1</a></sup>
+                    Add as a 
+                    <a href="/acs-aem-commons/pages/maven.html">sub package</a> 
+                    from 
+                    <a href="http://repo.adobe.com/nexus/content/groups/public/com/adobe/acs/acs-aem-commons-content/{{ site.data.acs-aem-commons.version }}/">repo.adobe.com</a> using Maven or manually deploy the 
+                    <a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/releases">package</a> using package manager.
+                    <sup id="fnref:1"><a href="#fn:1" rel="footnote">1</a></sup>
                 </p>
             </div>
 
