--- a/acs-aem-tools/index.html
+++ b/acs-aem-tools/index.html
@@ -37,7 +37,9 @@ description: ...
                 <h4>Where do I get ACS AEM Tools?</h4>
 
                 <p>
-                    Download the <a href="#">latest release as a CQ Package</a> and install via Package Manager.
+                    Download the 
+                    <a href="https://github.com/Adobe-Consulting-Services/acs-aem-tools/releases/download/ACS/acs-aem-tools-content-{{ site.data.acs-aem-tools.version }}.zip">latest release</a> 
+                    and install via Package Manager.
                 </p>
             </div>
 
