Pacakage footnote on ACS Tools

--- a/acs-aem-tools/index.html
+++ b/acs-aem-tools/index.html
@@ -40,6 +40,7 @@ description: ...
                     Download the 
                     <a href="https://github.com/Adobe-Consulting-Services/acs-aem-tools/releases/download/ACS/acs-aem-tools-content-{{ site.data.acs-aem-tools.version }}.zip">latest release</a> 
                     and install via Package Manager.
+                    <sup id="fnref:1"><a href="#fn:1" rel="footnote">1</a></sup>
                 </p>
             </div>
 
@@ -78,6 +79,14 @@ description: ...
 
     </div>
 </section>
+
+<div class="footnotes">
+  <ol>
+      <li class="footnote" id="fn:1">
+          <p>In some circumstances, manual installation using the package manager will not appear to successfully complete. If this happens, reloading the package manager UI is necessary.<a href="#fnref:1" title="return to article"> ↩</a><p>
+      </li>
+  </ol>
+</div>
 
 {% include shared/who-we-are.html %}
 
