#3 - iOS related bug fixes

--- a/acs-aem-commons/index.html
+++ b/acs-aem-commons/index.html
@@ -1,7 +1,7 @@
 ---
 layout: acs-aem-commons_home
 title: Adobe AEM Commons
-description: ...
+description: A way to bootstrap AEM project with common functionality, a set ofreusable components, and an AEM development toolkit.
 ---
 <!-- How to use -->
 <section class="introduction">
@@ -58,7 +58,7 @@ description: ...
 <section class="features">
     <div class="stripe">
         <div class="container">
-            <h2 id="features">ACS AEM Commons Features</h2>
+            <h2 id="features">Features</h2>
         </div>
     </div>
 
