--- a/acs-aem-tools/index.html
+++ b/acs-aem-tools/index.html
@@ -1,7 +1,7 @@
 ---
 layout: acs-aem-tools_home
 title: ACS AEM Tools
-description: ...
+description: A set of tools whose goal is making AEM developer lives easier.
 ---
 
 
@@ -16,7 +16,7 @@ description: ...
                 <h4>What is ACS AEM Tools?</h4>
 
                 <p>
-                    A set of tools for making AEM 5.6 developer lives easier.
+                    A set of tools for making AEM developer lives easier.
                 </p>
 
             </div>
@@ -53,7 +53,7 @@ description: ...
 <section class="features">
     <div class="stripe">
         <div class="container">
-            <h2 id="features">ACS AEM Tools Features</h2>
+            <h2 id="features">Features</h2>
         </div>
     </div>
 
