ACS AEM Bundles page creation

--- a/acs-aem-commons/index.html
+++ b/acs-aem-commons/index.html
@@ -96,6 +96,8 @@ description: A way to bootstrap AEM project with common functionality, a set ofr
     </ol>
 </div>
 
+{% include shared/acs-aem-bundles.html %}
+
 {% include shared/who-we-are.html %}
 
 {% include shared/projects.html %}
