--- a/acs-aem-tools/index.html
+++ b/acs-aem-tools/index.html
@@ -88,6 +88,8 @@ description: A set of tools whose goal is making AEM developer lives easier.
   </ol>
 </div>
 
+{% include shared/acs-aem-bundles.html %}
+
 {% include shared/who-we-are.html %}
 
 {% include shared/projects.html %}
