--- a/index.html
+++ b/index.html
@@ -6,4 +6,6 @@ description: A collection of AEM works aimed at enabling the deployment and deve
 
 {% include shared/projects.html %}
 
+{% include shared/acs-aem-bundles.html %}
+
 {% include shared/who-we-are.html %}
