ACS AEM Samples - Typo in resource providers path

--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -95,7 +95,7 @@ codeURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/maste
 				</div>				
 			
 				<div class="samples-section">
-					<h3><a href="{{ page.codeURL }}/resourceprovider/impl" target="_blank">Sling Resource Providers</a></h3>
+					<h3><a href="{{ page.codeURL }}/resourceproviders/impl" target="_blank">Sling Resource Providers</a></h3>
 					<p>Expose data not in the JCR as if it were in the JCR!</p>
 				</div>			
 			
