ACS AEM Samples - corrected page description

--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -1,7 +1,7 @@
 ---
 layout: acs-aem-samples_home
 title: ACS AEM Samples
-description: A way to bootstrap AEM project with common functionality, a set ofreusable components, and an AEM development toolkit.
+description: Sample implementations of the common building blocks for AEM applications.
 codeURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/master/bundle/src/main/java/com/adobe/acs/samples
 ---
 <!-- How to use -->
