--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -36,7 +36,7 @@ codeURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/maste
                 <h4>How to use ACS AEM Samples!</h4>
 
                 <p>
-               	 	Review the code and copy/paste samples.
+               	 	Raed and learn from the code and copy/paste classes as baseline for your own implementations.
                 </p>
             </div>
 
