--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -93,7 +93,12 @@ codeURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/maste
 					<h3><a href="{{ page.codeURL }}/adapterfactories/impl" target="_blank">Sling Adapter Factories</a></h3>					
 					<p>Create your own .adaptTo(..) implementations.</p>
 				</div>				
-			
+
+				<div class="samples-section">
+					<h3><a href="{{ page.codeURL }}/resources/impl" target="_blank">Sling Resources</a></h3>
+					<p>Sling tooling to mimic and extend Sling Resource abstractions.</p>					
+				</div>	
+							
 				<div class="samples-section">
 					<h3><a href="{{ page.codeURL }}/resourceproviders/impl" target="_blank">Sling Resource Providers</a></h3>
 					<p>Expose data not in the JCR as if it were in the JCR!</p>
