Sling Resources #path mismatch

--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -95,7 +95,7 @@ codeURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/maste
 				</div>				
 
 				<div class="samples-section">
-					<h3><a href="{{ page.codeURL }}/resources/impl" target="_blank">Sling Resources</a></h3>
+					<h3><a href="{{ page.codeURL }}/resources" target="_blank">Sling Resources</a></h3>
 					<p>Sling tooling to mimic and extend Sling Resource abstractions.</p>					
 				</div>	
 							
