Replication Content Filter

--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -92,6 +92,16 @@ codeURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/maste
 				</div>
 			
 				<div class="samples-section">
+					<h3><a href="{{ page.codeURL }}/replication/impl" target="_blank">Replication</a></h3>
+					<p>Add custom behaviors to the AEM Replication process.</p>
+					<ul>
+						<li><a href="{{ page.codeURL }}/replication/impl/SampleReplicationContentFilter.java" target="_blank">Replication Content Filter</a></li>
+					</ul>					
+				</div>
+			</div>
+		
+			<div class="col2">
+				<div class="samples-section">
 					<h3><a href="{{ page.codeURL }}/servlets/impl" target="_blank">Servlets</a></h3>
 					<p>HTTP Servlets. GET. POST. 'nuff said.</p>
 					<ul>
@@ -99,9 +109,7 @@ codeURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/maste
 						<li><a href="{{ page.codeURL }}/servlets/impl/SampleSafeMethodsServlet.java" target="_blank">Safe Methods Servlet</a></li>
 					</ul>					
 				</div>
-			</div>
-		
-			<div class="col2">				
+												
 				<div class="samples-section">
 					<h3><a href="{{ page.codeURL }}/adapterfactories/impl" target="_blank">Sling Adapter Factories</a></h3>					
 					<p>Create your own .adaptTo(..) implementations.</p>
