--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -96,6 +96,7 @@ codeURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/maste
 					<p>Add custom behaviors to the AEM Replication process.</p>
 					<ul>
 						<li><a href="{{ page.codeURL }}/replication/impl/SampleReplicationContentFilter.java" target="_blank">Replication Content Filter</a></li>
+												<li><a href="{{ page.codeURL }}/replication/impl/SampleReplicationPreprocessor.java" target="_blank">Replication Preprocessor</a></li>
 					</ul>					
 				</div>
 			</div>
