--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -15,18 +15,18 @@ codeURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/maste
                 <h4>What ACS AEM Samples is!</h4>
 
                 <p>
-                    A collection of <em>well commented</em> AEM code samples of <em>usual building blocks</em>.
+                    <em>Well commented</em> code samples of <em>AEM building blocks</em> to help educate AEM developers.
                 </p>
-
             </div>
 
             <div class="info-with-icon">
                 <div class="icon icon-x"></div>
 
                 <h4>What ACS AEM Samples isn't!</h4>
-
+				
                 <p>
-                    An application package that should be installed.
+                    An AEM package that provides "real" functionality. 
+					No guarantees exist around the effects of installing this package in AEM; it has not been vetted for unobtrusiveness.
                 </p>
             </div>
 
@@ -36,7 +36,7 @@ codeURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/maste
                 <h4>How to use ACS AEM Samples!</h4>
 
                 <p>
-               	 	Read and learn from the code and copy/paste classes as baseline for your own implementations.
+               	 	Read and <strong>learn from the code</strong>, and copy/paste classes as a baseline for your own implementations. When installing this Package directly to AEM for learning purposes, install <strong>only</strong> on Development environments.
                 </p>
             </div>
 
