--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -15,7 +15,7 @@ codeURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/maste
                 <h4>What ACS AEM Samples is!</h4>
 
                 <p>
-                    <em>Well commented</em> code samples of <em>AEM building blocks</em> to help educate AEM developers.
+                    <em>Well commented</em> code samples of <em>AEM building blocks</em> to help educate AEM developers. Samples can act as a structural skeletons for your own implementions!
                 </p>
             </div>
 
@@ -36,7 +36,7 @@ codeURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/maste
                 <h4>How to use ACS AEM Samples!</h4>
 
                 <p>
-               	 	Read and <strong>learn from the code</strong>, and copy/paste classes as a baseline for your own implementations. When installing this Package directly to AEM for learning purposes, install <strong>only</strong> on Development environments.
+               	 	Read and <em>learn from the code</em>! When installing this Package directly to AEM for learning purposes, install <em>only on Development environments</em>.
                 </p>
             </div>
 
