Fix typo in samples index.

--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -79,7 +79,7 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 
 				<div class="samples-section">
 					<h3><a href="{{ page.bundleURL }}/predicates/impl/SamplePredicate.java" target="_blank">Predicates</a></h3>
-					<p>Fitler Nodes and Resources in and out of Lists and Pathfields.</p>					
+					<p>Filter Nodes and Resources in and out of Lists and Pathfields.</p>					
 				</div>	
 
 				<div class="samples-section">
