--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -61,7 +61,15 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 <!-- **************************************** COLUMN 1 **************************************** -->		
 			
 			<div class="col1">
-			  
+
+				<div class="samples-section">
+					<h3><a href="{{ page.bundleURL }}/authentication/impl" target="_blank">Authentication</a></h3>
+					<p>Authenticating users in AEM or getting different security contexts programmatically (Resource Resolvers and JCR Sessions)</p>
+					<ul>
+						<li><a href="{{ page.bundleURL }}/filters/impl/SampleServiceLoginResourceResolverImpl.java" target="_blank">Service Resource Resolvers</a></li>
+					</ul>	
+				</div>	
+							  
 				<div class="samples-section">
 					<h3><a href="{{ page.bundleURL }}/filters/impl" target="_blank">Filters</a></h3>
 					<p>Executed in a chain against every HTTP request, Filters provide a powerful hook into the HTTP Request processing context.</p>
