--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -152,6 +152,15 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 				</div>				
 
 				<div class="samples-section">
+					<h3><a href="{{ page.bundleURL }}/models" target="_blank">Models</a></h3>					
+					<p>Create models for resources (or other things).</p>
+					<ul>
+						<li><a href="{{ page.bundleURL }}/models/SampleSlingModel.java" target="_blank">Sling Model</a></li>
+					</ul>		
+				</div>				
+
+
+				<div class="samples-section">
 					<h3><a href="{{ page.bundleURL }}/resources" target="_blank">Sling Resources</a></h3>
 					<p>Sling tooling to mimic and extend Sling Resource abstractions.</p>	
 					<ul>
