--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -115,11 +115,13 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 
 				<div class="samples-section">
 					<h3><a href="{{ page.bundleURL }}/querybuilder/impl" target="_blank">Query Builder</a></h3>
-					<p>AEM's Querybuilder provides an extensible abstraction for querying content in AEM.</p>
+					<p>AEM's Querybuilder provides an extensible abstraction for querying content.</p>
+					<ul>
 						<li><a href="{{ page.bundleURL }}/querybuilder/impl/SampleJsonHitWriter.java" target="_blank">Result Hit Writer</a></li>
 						<li><a href="{{ page.bundleURL }}/querybuilder/impl/SampleFilteringPredicateEvaluator.java" target="_blank">Filtering Predicate Evaluator</a></li>					
 
 						<li><a href="{{ page.bundleURL }}/querybuilder/facets/impl/SampleFacetPredicateEvaluator.java" target="_blank">Facet Extractor</a></li>					
+					</ul>
 
 				</div>	
 
