Added AngularJS Sample index

--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -61,6 +61,13 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 <!-- **************************************** COLUMN 1 **************************************** -->		
 			
 			<div class="col1">
+				<div class="samples-section">
+					<h3>AngularJS</h3>
+					<p>Build rich expierences within AEM using AngularJS.</p>
+					<ul>
+						<li><a href="{{ page.contentURL }}/angularjs-app" target="_blank">Single-Page App</a></li>
+					</ul>	
+				</div>	
 
 				<div class="samples-section">
 					<h3><a href="{{ page.bundleURL }}/authentication/impl" target="_blank">Authentication</a></h3>
