Touch UI section head link point to touch-ui
Changed the touch ui header link, It was pointing to workflow

--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -99,7 +99,7 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 			   
 				<div class="samples-section">
 					<h3><a href="{{ page.bundleURL }}/jobs/impl" target="_blank">Jobs</a></h3>
-					<p>Completing work with some guarantees.</p>
+					<p>Completing work with some guarantees.</p>d
 				</div>				   
 			   
 				<div class="samples-section">
@@ -191,7 +191,7 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 				</div>
 			
 				<div class="samples-section">
-					<h3><a href="{{ page.bundleURL }}/workflow/impl" target="_blank">Touch UI Widgets</a></h3>
+					<h3><a href="{{ page.contentURL }}/touch-ui" target="_blank">Touch UI Widgets</a></h3>
 					<p>Build and customize AEM's Touch UI interfaces and dialogs.</p>
 					<ul>
 						<li><a href="{{ page.contentURL }}/touch-ui/datasources/sample-datasource" target="_blank">Data Sources</a></li>
