--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -99,7 +99,7 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 			   
 				<div class="samples-section">
 					<h3><a href="{{ page.bundleURL }}/jobs/impl" target="_blank">Jobs</a></h3>
-					<p>Completing work with some guarantees.</p>d
+					<p>Completing work with some guarantees.</p>
 				</div>				   
 			   
 				<div class="samples-section">
