--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -63,7 +63,7 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 			<div class="col1">
 				<div class="samples-section">
 					<h3>AngularJS</h3>
-					<p>Build rich expierences within AEM using AngularJS.</p>
+					<p>Build rich experiences within AEM using AngularJS.</p>
 					<ul>
 						<li><a href="{{ page.contentURL }}/angularjs-app" target="_blank">Single-Page App</a></li>
 					</ul>	
