Fix minor typo on ACS AEM Samples page

--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -138,7 +138,7 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 				<div class="samples-section">
 					<h3><a href="{{ page.bundleURL }}/services/impl" target="_blank">OSGi Services</a></h3>
 					<p>One of the most powerful abstractions in AEM! 
-						OSGi services a the perfect place to develop business logic for 
+						OSGi services are the perfect place to develop business logic for
 						re-use across all your AEM applications.</p>
 					<ul>
 						<li><a href="{{ page.bundleURL }}/services/impl/SampleMultiReferenceServiceImpl.java" target="_blank">Service w/ Multi-References</a></li>
