reference github releases page for download to give the choose between full and min version, instead of directly linking to the full version

--- a/acs-aem-tools/index.html
+++ b/acs-aem-tools/index.html
@@ -38,7 +38,7 @@ description: A set of tools whose goal is making AEM developer lives easier.
 
                 <p>
                     Download the 
-                    <a href="https://github.com/Adobe-Consulting-Services/acs-aem-tools/releases/download/acs-aem-tools-{{ site.data.acs-aem-tools.version }}/acs-aem-tools-content-{{ site.data.acs-aem-tools.version }}.zip">latest release</a>
+                    <a href="https://github.com/Adobe-Consulting-Services/acs-aem-tools/releases">latest release</a>
                     and install via Package Manager.
                     <sup id="fnref:1"><a href="#fn:1" rel="footnote">1</a></sup>
                 </p>
