--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -82,7 +82,7 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 					<p>Asynchronous system notifications.</p>
 					<ul>
 						<li><a href="{{ page.bundleURL }}/events/impl/SampleSlingEventHandler.java" target="_blank">Sling Event Handler</a></li>
-            <li><a href="{{ page.bundleURL }}/jobs/impl/SampleEventHandlerWithImmediateJobExecution.java" target="_blank">Sling Event Handler (with Immediate Job Excution)</a></li>
+            <li><a href="{{ page.bundleURL }}/jobs/impl/SampleEventHandlerWithImmediateJobExecution.java" target="_blank">Sling Event Handler (with Immediate Job Execution)</a></li>
             <li><a href="{{ page.bundleURL }}/events/impl/SampleJcrEventListener.java" target="_blank">JCR Event Listener</a></li>
 						<li><a href="{{ page.bundleURL }}/events/cq5/impl/SampleSlingEventHandler.java" target="_blank">(Legacy) CQ5 Sling Event Handler</a></li>
 					</ul>
@@ -103,7 +103,7 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 					<p>Completing work with some guarantees.</p>
           <ul>
 						<li><a href="{{ page.bundleURL }}/jobs/impl/SampleSlingJobConsumer.java" target="_blank">Sling Job Consumer</a></li>
-						<li><a href="{{ page.bundleURL }}/jobs/impl/SampleEventHandlerWithImmediateJobExecution.java" target="_blank">Sling Event Handler (with Immediate Job Excution)</a></li>
+						<li><a href="{{ page.bundleURL }}/jobs/impl/SampleEventHandlerWithImmediateJobExecution.java" target="_blank">Sling Event Handler (with Immediate Job Execution)</a></li>
           </ul>
 				</div>
 
