--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -74,6 +74,7 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 					<p>Authenticating users in AEM or getting different security contexts programmatically (Resource Resolvers and JCR Sessions)</p>
 					<ul>
 						<li><a href="{{ page.bundleURL }}/authentication/impl/SampleServiceLoginResourceResolverImpl.java" target="_blank">Service Resource Resolvers</a></li>
+						<li><a href="{{ page.bundleURL }}/authentication/impl/SampleLoginHookAuthenticationHandler.java" target="_blank">Authentication Handler Login Hook</a></li>
 					</ul>
 				</div>
 
