adding ids for analytics Activitymap

--- a/acs-aem-commons/index.html
+++ b/acs-aem-commons/index.html
@@ -4,7 +4,7 @@ title: Adobe AEM Commons
 description: A way to bootstrap AEM project with common functionality, a set ofreusable components, and an AEM development toolkit.
 ---
 <!-- How to use -->
-<section class="introduction">
+<section class="introduction" id="introduction">
     <div class="container">
         <div class="wrapper infos-with-icon">
 
@@ -55,7 +55,7 @@ description: A way to bootstrap AEM project with common functionality, a set ofr
 
 
 <!-- Features -->
-<section class="features">
+<section class="features" id="features">
     <div class="stripe">
         <div class="container">
             <h2 id="features">Features</h2>
@@ -80,7 +80,7 @@ description: A way to bootstrap AEM project with common functionality, a set ofr
 </section>
 
 <!-- Footnotes -->
-<div class="footnotes">
+<div class="footnotes" id="footnotes">
     <ol>
         <li class="footnote" id="fn:1">
             <p>In some circumstances, manual installation using the package manager will not appear to successfully complete. If this happens, reloading the package manager UI is necessary.<a href="#fnref:1" title="return to article"> ↩</a><p>
