--- a/acs-aem-tools/index.html
+++ b/acs-aem-tools/index.html
@@ -6,7 +6,7 @@ description: A set of tools whose goal is making AEM developer lives easier.
 
 
 <!-- How to use -->
-<section class="introduction">
+<section class="introduction" id="introduction">
     <div class="container">
         <div class="wrapper infos-with-icon">
 
@@ -50,7 +50,7 @@ description: A set of tools whose goal is making AEM developer lives easier.
 
 
 <!-- Features -->
-<section class="features">
+<section class="features" id="features">
     <div class="stripe">
         <div class="container">
             <h2 id="features">Features</h2>
@@ -80,7 +80,7 @@ description: A set of tools whose goal is making AEM developer lives easier.
     </div>
 </section>
 
-<div class="footnotes">
+<div class="footnotes" id="footnotes">
   <ol>
       <li class="footnote" id="fn:1">
           <p>In some circumstances, manual installation using the package manager will not appear to successfully complete. If this happens, reloading the package manager UI is necessary.<a href="#fnref:1" title="return to article"> ↩</a><p>
