--- a/acs-aem-tools/index.html
+++ b/acs-aem-tools/index.html
@@ -4,6 +4,18 @@ title: ACS AEM Tools
 description: A set of tools whose goal is making AEM developer lives easier.
 ---
 
+<section class="aem-chrome-plugin-banner">
+    <div class="container">
+        <div class="">
+          <a href="/acs-aem-tools/aem-chrome-plugin">
+          <img
+            class="img-responsive"
+            style="border-color: white; border-style: solid; border-width: 1em;  -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25); box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25);"
+            src="/assets/acs-aem-tools/images/aem-chrome-plugin-banner.png" alt="Download the AEM Chrome Plug-in"/></a>
+        </div>
+    </div>
+</section>
+
 
 <!-- How to use -->
 <section class="introduction" id="introduction">
@@ -37,7 +49,7 @@ description: A set of tools whose goal is making AEM developer lives easier.
                 <h4>Where do I get ACS AEM Tools?</h4>
 
                 <p>
-                    Download the 
+                    Download the
                     <a href="https://github.com/Adobe-Consulting-Services/acs-aem-tools/releases">latest release</a>
                     and install via Package Manager.
                     <sup id="fnref:1"><a href="#fn:1" rel="footnote">1</a></sup>
